# Archive-RAG

./: .env  .gitignore  FIX_LLM_ERROR.md  HUGGINGFACE_API_MIGRATION.md  HUGGINGFACE_LLM_ISSUE.md  HUGGINGFACE_LLM_SETUP.md  HUGGINGFACE_MODELS.md  MODIFYING_DATA_FORMAT.md  README.md  REMOTE_PROCESSING.md  REMOTE_SETUP.md  REMOTE_SETUP_QUICKSTART.md  cardano_ecosystem_dynamic.graphml  check_remote_status.py  embeddings_cache.pkl  fix_env_format.py  pyproject.toml  pytest.ini  requirements.txt  test_env_loading.py  update_env_endpoints.py  verify_env.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: compliance-check.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
data/: README.md
data/benchmarks/: eval.json
data/issue_reports/: 258fabf3-3c90-4ad6-af0a-5571f485e4e2.json  b947dcaa-fec5-4234-9f95-10c619e8ebec.json
data/sample/: README.md  meeting_001.json  meeting_002.json  meeting_new_format.json
docs/: citation-verification-guide.md  compliance-usage.md  discord-bot-checklist.md  discord-bot-implementation-summary.md  discord-bot-list-command.md  discord-bot-performance-monitoring.md  discord-bot-permissions.md  discord-bot-phase5-summary.md  discord-bot-quick-reference.md  discord-bot-setup.md  discord-bot-testing-examples.md  discord-bot-testing.md  discord-bot-troubleshooting.md  entity-extraction-and-rag-guide.md  web-hosting-guide.md
specs/001-archive-meeting-rag/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
tests/: README_NER_TESTS.md  __init__.py
(+170 files in other folders)
