[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-rag"
version = "0.1.0"
description = "Archive Meeting Retrieval & Grounded Interpretation RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "transformers>=4.30.0",
    "typer>=0.9.0",
    "structlog>=23.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "gensim>=4.3.0",
    "spacy>=3.6.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
archive-rag = "src.cli.main:main"

[tool.setuptools]
packages = ["src", "src.models", "src.services", "src.cli", "src.lib"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]



